apps/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: default
spec:
  selector:
    app: syncthing
  ports:
    - name: gui
      port: 8384
      targetPort: 8384
